[package]
name = "lxmf-core"
description = "LXMF messaging protocol implementation for Reticulum"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = { workspace = true }
rns-crypto = { workspace = true }
rns-wire = { workspace = true }
rns-identity = { workspace = true }
rns-link = { workspace = true }
rns-protocol = { workspace = true }
rns-transport = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
rmp-serde = { workspace = true }
rmpv = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
